Add wireframe demo

--- a/src/topics/wireframes/index.mdx
+++ b/src/topics/wireframes/index.mdx
@@ -12,29 +12,34 @@ resources:
 
 An early step in any good UX project is to build wireframes. They are low-effort, high-return structures that show the client/development team where information is going to be and how it will be organized. Wireframes may have lots of scribbles and notations that plan out interactivity and often have arrows connecting the different screens.
 
-Wireframes can vary based on **fidelity**, or level of detail. With wireframes, we are only concerned with visual fidelity (the detail that we can see). When we prototype, we will also address functional fidelity (how realistically the app works).
+Wireframes can vary based on **fidelity**, or level of detail. With wireframes, we are only concerned with **visual fidelity** (the detail that we can see). When we prototype, we will also address **functional fidelity** (how realistically the app works).
 
-wireframe-fidelity.jpg
+<iframe
+  width="100%"
+  height="600"
+  src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FRy8TaclWriU42GG7Xa5HzT%2FFidelity-Demo%3Fnode-id%3D0%253A1"
+  allowfullscreen
+  className="my-8"
+></iframe>
 
 Above is a sample interface in low-, medium-, and high-fidelity. In early planning, we are aiming for low- to mid-fidelity wireframes featuring very basic boxes and icons.
 
 <figure>
 
-  <Img src="lucidchart.png" alt="Annotated e-commerce category page wireframe" />
+<Img src="lucidchart.png" alt="Annotated e-commerce category page wireframe" />
 
-  <figcaption>
-    This template from LucidChart is an example of a basic, clean digital wireframe.
-  </figcaption>
+<figcaption>
+  This template from LucidChart is an example of a basic, clean digital
+  wireframe.
+</figcaption>
 
-  <License
-    type="copyright"
-    link="https://www.lucidchart.com/pages/templates/ui-mockup/lucidchart-annotated-e-commerce-category-page-wireframe"
-    mediaType="Interface template"
-    authors={[
-      { name: 'LucidChart', link: 'https://www.lucidchart.com' },
-    ]}
-    className="mt-4"
-  />
+<License
+  type="copyright"
+  link="https://www.lucidchart.com/pages/templates/ui-mockup/lucidchart-annotated-e-commerce-category-page-wireframe"
+  mediaType="Interface template"
+  authors={[{ name: 'LucidChart', link: 'https://www.lucidchart.com' }]}
+  className="mt-4"
+/>
 
 </figure>
 
@@ -48,7 +53,7 @@ Prototypes have levels of fidelity too. At the low end, they are tappable. At th
 
 ## Why are early-stage wireframes so basic?
 
-Low-fidelity wireframes may look like quick scribbles – because they often are. Testing wireframes usually occurs at multiple levels of visual fidelity. By testing early with a lower-fidelity wireframe, initial bugs can be squashed without needing to invest the time in something more complex.
+Low-fidelity wireframes may look like quick scribbles – because they often are. Testing wireframes usually occurs at multiple levels of visual fidelity. By testing early with a lower-fidelity wireframe, initial bugs can be squashed without needing to invest the time in something more complex. Clients can get a quick idea of the layout/structure and provide feedback before the detailed work begins.
 
 By keeping the style plain and non-distracting, emphasis is entirely on the content and organization. No matter how much a UX designer may say "ignore the font; that is only for testing", clients and users can get caught up on the appearance and derail an important planning session.
 
@@ -56,23 +61,23 @@ One wireframing tool, Balsamiq, purposely makes their wireframes look hand-drawn
 
 <figure>
 
-  <Img src="balsamiq.jpg" alt="Sample features in the Balsamiq wireframing app" />
+<Img src="balsamiq.jpg" alt="Sample features in the Balsamiq wireframing app" />
 
-  <figcaption>
-    Balsamiq has many components, but they are all uneven, wobbly, and imperfect.
-  </figcaption>
+<figcaption>
+  Balsamiq has many components, but they are all uneven, wobbly, and imperfect.
+</figcaption>
 
-  <License
-    type="cc"
-    ccVersion="2.0"
-    ccLicense="BY"
-    link="https://www.flickr.com/photos/vuhung/11130555105"
-    mediaType="Balsamiq demo image"
-    authors={[
-      { name: 'Nguyen Hung Vu', link: 'https://www.flickr.com/photos/vuhung/' },
-    ]}
-    className="mt-4"
-  />
+<License
+  type="cc"
+  ccVersion="2.0"
+  ccLicense="BY"
+  link="https://www.flickr.com/photos/vuhung/11130555105"
+  mediaType="Balsamiq demo image"
+  authors={[
+    { name: 'Nguyen Hung Vu', link: 'https://www.flickr.com/photos/vuhung/' },
+  ]}
+  className="mt-4"
+/>
 
 </figure>
 
@@ -82,21 +87,27 @@ No confusing that for the real design! Note that even in this sketch-looking sty
 
 <figure>
 
-  <Img src="photo-1597534458220-9fb4969f2df5.jpeg" alt="iPad showing a basic sketched wireframe" />
+<Img
+  src="photo-1597534458220-9fb4969f2df5.jpeg"
+  alt="iPad showing a basic sketched wireframe"
+/>
 
-  <figcaption>
-    Basic wireframe showing image regions, headlines, and smaller text
-  </figcaption>
+<figcaption>
+  Basic wireframe showing image regions, headlines, and smaller text
+</figcaption>
 
-  <License
-    type="unsplash"
-    link="https://unsplash.com/photos/pl9DrjAMV6I"
-    mediaType="Photo"
-    authors={[
-      { name: 'Visual Design', link: 'https://unsplash.com/@visualdesign_inspiration' },
-    ]}
-    className="mt-4"
-  />
+<License
+  type="unsplash"
+  link="https://unsplash.com/photos/pl9DrjAMV6I"
+  mediaType="Photo"
+  authors={[
+    {
+      name: 'Visual Design',
+      link: 'https://unsplash.com/@visualdesign_inspiration',
+    },
+  ]}
+  className="mt-4"
+/>
 
 </figure>
 
@@ -108,3 +119,17 @@ You do not have to be a great artist to create wireframes, but some common shape
 - Thinner lines can represent smaller text
   - Lines can be straight or wavy depending on your style
   - Use irregular line lengths to suggest the text alignment (even at the left edge is left-aligned, etc.)
+
+## What should I use to create wireframes?
+
+Just like other UI/UX tools, there are many choices. Very low-quality wireframes are often created by hand as quick sketches, but higher-fidelity wireframes are created in software.
+
+Popular software choices include...
+
+- [Figma](./figma)
+- [Sketch](https://www.sketch.com/) (Mac-only; [student pricing available](https://www.sketch.com/store/edu/))
+- Adobe Photoshop, Illustrator, or XD
+- [InVision](https://www.invisionapp.com/) ([student pricing available](http://www.invisionapp.com/education-signup))
+- [Axure](https://www.axure.com/) ([student pricing available](https://www.axure.com/edu))
+
+For our class purposes, **Figma** is the recommended tool. Wireframes and prototypes _can_ be created in separate software, but we focus on Figma for the prototyping and using Figma for wireframes as well will help build more experience with the program.
